# cmake_minimum_required(VERSION <specify CMake version here>)
project(spring_2018_program_5_binary_search_tree_Waltbo)

set(CMAKE_CXX_STANDARD 11)

add_executable(spring_2018_program_5_binary_search_tree_Waltbo
        BinarySearchTree/nbproject/private/c_standard_headers_indexer.c
        BinarySearchTree/nbproject/private/cpp_standard_headers_indexer.cpp
        BinarySearchTree/BinarySearchTree.cpp
        BinarySearchTree/BinarySearchTree.h
        BinarySearchTree/main.cpp)
